--- a/.gitignore
+++ b/.gitignore
@@ -30,3 +30,4 @@ proguard/
 
 # Android Studio captures folder
 captures/
+ClothesForecast/app/src/main/java/com/khasang_incubator/clothesforecast/secure
