--- a/ClothesForecast/app/src/main/AndroidManifest.xml
+++ b/ClothesForecast/app/src/main/AndroidManifest.xml
@@ -18,6 +18,10 @@
             </intent-filter>
 
         </activity>
+        <activity android:name=".ShowWeather"
+            android:label="@string/app_name">
+
+        </activity>
     </application>
 
 </manifest>
